Bug 158975 - FILESAVE Save to a Samba share changes file owner / permissions
Summary: FILESAVE Save to a Samba share changes file owner / permissions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, regression
Depends on:
Blocks: Network
  Show dependency treegraph
 
Reported: 2024-01-02 14:30 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-12 14:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-02 14:30:12 UTC
I have a shared folder on my Linux host, and a VM Windows.
When I modify an existing file in the Linux shared folder from the Windows VM with LO, the files owner is changed as well.

1. Have a shared file on a Samba share
2. Open it from another machine with LO
3. Save it after a small change
-> the owner is changed to the Windows user

For an example, before I had this (jakab is a dummy user, since my user name is gabor both on the host and guest):

gabor@shuttle:~/thinclient_drives/perm-test-windows$ ll
összesen 28
drwxrwxrwx  2 gabor gabor  4096 jan    2 15:17 ./
drwxrwxrwt 49 gabor gabor 12288 jan    2 15:15 ../
-rw-rw-rw-  1 jakab jakab 11345 jan    2 15:17 test.ods

After overwriting the test.ods from Windows the owner is changed:

gabor@shuttle:~/thinclient_drives/perm-test-windows$ ll ; echo "after save"
összesen 28
drwxrwxrwx  2 gabor gabor  4096 jan    2 15:19 ./
drwxrwxrwt 49 gabor gabor 12288 jan    2 15:15 ../
-rw-rw-rw-  1 gabor gabor 11359 jan    2 15:19 test.ods
after save

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 78027c68397f26aec9051b82388cd7452ec66e3d
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: de-DE
Calc: threaded

Seems to have started in 6.1 with:
https://git.libreoffice.org/core/+/27938e1bbd5f3405c47b9933be7489eeb03920f3

author	Miklos Vajna <vmiklos@collabora.co.uk>	Wed Jan 17 18:11:41 2018 +0100
committer	Julien Nabet <serval2412@yahoo.fr>	Thu Jan 18 07:12:42 2018 +0100

sfx2 store: create temp files next to local files (storage case)
Comment 1 Gabor Kelemen (Collabora) 2024-01-02 14:35:22 UTC
Another aspect is file permissions, for example adding x right to everyone:

gabor@shuttle:~/thinclient_drives/perm-test-lin$ sudo chmod a+x test.ods 
gabor@shuttle:~/thinclient_drives/perm-test-lin$ ll
összesen 28
drwxrwxr-x  2 gabor gabor  4096 jan    2 15:28 ./
drwxrwxrwt 50 gabor gabor 12288 jan    2 15:25 ../
-rwxrwxrwx  1 jakab jakab 10422 jan    2 15:28 test.ods*

Saving in another system also resets those:
gabor@shuttle:~/thinclient_drives/perm-test-lin$ ll ; echo "after save"
összesen 28
drwxrwxr-x  2 gabor gabor  4096 jan    2 15:32 ./
drwxrwxrwt 50 gabor gabor 12288 jan    2 15:25 ../
-rw-rw-rw-  1 gabor gabor 10704 jan    2 15:32 test.ods
after save
Comment 2 Gabor Kelemen (Collabora) 2024-01-02 14:35:53 UTC
Reserving
Comment 3 Commit Notification 2024-02-08 07:29:49 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf616121ed48c8df96104bc35abf3b55b8862043

tdf#158975 Add option to not write temp file next to local file

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.