tdf#158975 Add option to not write temp file next to local file

This causes permission issues in some setups.
See bug report for details.

Change-Id: If97030f95185ab96e21cec968b734fba8a811f9d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163003
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>